--- a/Views/Home/Create.cshtml
+++ b/Views/Home/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿
-@model Student
+@model StudentCreateViewModel
 @inject IstudentRespository _studentRespository
 @{
     ViewBag.Title = "创建学生信息";
 }
-    <form asp-controller="home" asp-action="create" method="post" class="mt-3">
+    <form asp-controller="home" asp-action="create" method="post" class="mt-3" enctype="multipart/form-data">
         <div asp-validation-summary="All" class="text-danger"></div>
         <div class="form-group row">
             <label asp-for="Name" class="col-sm-2 col-form-label"></label>@*@//为name infut 服务*@
@@ -35,6 +35,17 @@
             </div>
         </div>
         <div class="form-group row">
+            <label asp-for="PhotoPath" class="col-sm-2 col-form-label"></label>
+            <div class="col-sm-10">
+                <div class="custom-file">
+                    <input asp-for="PhotoPath" class="form-control custom-file-input" />
+                    <label class="custom-file-label">请选择图片...</label>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="form-group row">
             <div class="col-sm-10">
                 <button type="submit" class="btn btn-primary">创建</button>
             </div>
@@ -45,4 +56,17 @@
                 学生信息总人数=@_studentRespository.GetStudents().Count().ToString();
             </div>
         </div>
+        
+        @section Scripts{
+            <script type="text/javascript">
+                $(document).ready(function () {
+                    $('.custom-file-input').on("change", function () {
+                        console.log($(this).val());
+                        var filename = $(this).val().split("\\").pop();
+                        $(this).next(".custom-file-label").html(filename);
+                    });
+                }
+                );
+            </script>
+        }
     </form>
