--- a/Views/Home/Details.cshtml
+++ b/Views/Home/Details.cshtml
@@ -2,23 +2,24 @@
 @{
     //Layout = "~/Views/Shared/_Layout.cshtml";
     ViewBag.Title = "学生详情页";
+    var photopath = "~/images/" + (Model.Student.PhotoPath ?? "wangye.png");
 }
 
-<div class="row   justify-content-center m-3" >
+<div class="row   justify-content-center m-3">
     <div class="col-sm-8">
         <div class="card">
             <div class="card-header">
                 <h1>@Model.Student.Id</h1>
             </div>
             <div class="card-body text-center">
-                <img class="card-img-top" src="~/Images/baoer.jpg" />
+                <img class="card-img-top imagesThumbnail" src="@photopath" asp-append-version="true" />@*强制缓存方式,读取服务缓存，对服务器的压力减少*@
                 <h4>学生ID:@Model.Student.Id</h4>
                 <h4>姓名:@Model.Student.Name</h4>
                 <h4>班级名称:@Model.Student.ClassNeme</h4>
                 <h4>邮箱:@Model.Student.Email</h4>
             </div>
             <div class="card-footer text-center">
-                <a asp-action="index" asp-controller="home"  class="btn btn-primary">返回</a>
+                <a asp-action="index" asp-controller="home" class="btn btn-primary">返回</a>
                 <a href="#" class="btn btn-primary">编辑</a>
                 <a href="#" class="btn btn-danger">删除</a>
             </div>
@@ -26,15 +27,15 @@
     </div>
 </div>
 @*<h3>@Model.PageTitle</h3>
-<div>
-    姓名：@Model.Student.Name;
-</div>
-<div>
-    邮箱：@Model.Student.Email;
-</div>
-<div>
-    班级名称：@Model.Student.ClassNeme;
-</div>*@
+    <div>
+        姓名：@Model.Student.Name;
+    </div>
+    <div>
+        邮箱：@Model.Student.Email;
+    </div>
+    <div>
+        班级名称：@Model.Student.ClassNeme;
+    </div>*@
 @section Script
 {
     <script src="~/js/CustomScript.js"></script>
